commit - add time range managing logic